@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2013-05-30
  * Added the --do option to wing db.
+ * Added the wing tenant plugin
 
 2013-05-25
  * Added Wing Command, the new CLI for Wing.
